# dataloader

./: CONVENTIONS.md  DESIGN.md  IDEAS.md  README.md  justfile  pyproject.toml  pyproject_confidentialities_example.toml
src/dino_loader/: __init__.py  augmentation.py  batch_node.py  checkpoint.py  config.py  dali_node.py  loader.py  memory.py  mixing_source.py  nodes.py  pipeline.py  pipeline_graph.py  shard_cache.py  shard_reader.py  train.py
src/dino_loader/backends/: __init__.py  cpu.py  dali_backend.py  protocol.py
src/dino_loader/datasets/: __init__.py  cli.py  dataset.py  hub.py  settings.py  shard_writer.py  spec.py  stub_gen.py
src/dino_loader/experimental/: dynamic_pipeline.py
src/dino_loader/monitor/: metrics.py  otel.py  tracing.py
src/dino_loader/sources/: __init__.py  _weights.py  hpc_source.py  resolution.py  tar_utils.py  wds_source.py
src/dino_loader/tools/: shard_writer.py
tests/: conftest.py  test_checkpoint.py  test_confidentiality_registry.py  test_config.py  test_cpu_backend.py  test_datasets_cli.py  test_fixes.py  test_hub_modality.py  test_improvements.py  test_loader_concurrency.py  test_loader_config.py  test_loader_cpu.py  test_memory.py  test_mixing_source.py  test_monitor.py  test_multirank.py  test_nodes.py  test_nodes_and_pipeline_graph.py  test_pipeline_graph.py  test_shard_cache.py  test_shard_utils.py
tests/fixtures/: __init__.py
tests/sources/: test_tar_utils.py  test_wds_source.py
